// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorInput Snapshots renders a dark checkIcon if hex value is light 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  color: #787878;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      onChange={[Function]}
      placeholder="FFFFFF"
      type="text"
      value="ffffff"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders a light checkIcon if hex value is dark 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  color: #787878;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      onChange={[Function]}
      placeholder="FFFFFF"
      type="text"
      value="e6e"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders as expected 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  color: #787878;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      onChange={[Function]}
      placeholder="FFFFFF"
      type="text"
      value=""
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders with a selected color 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  color: #787878;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      onChange={[Function]}
      placeholder="FFFFFF"
      type="text"
      value="e6e"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders with a selected color without # 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  color: #787878;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      onChange={[Function]}
      placeholder="FFFFFF"
      type="text"
      value="e6e"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
  </div>
</div>
`;
